--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rc_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rowshon.github.io",
   "proxy": "http://localhost:3001",
   "dependencies": {
     "-": "^0.0.1",
@@ -15,7 +16,6 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "cors": "^2.8.5",
-    "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -34,7 +34,9 @@
     "stop": "taskkill -F -IM node.exe",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
